--- a/ProofOfConcept.Tests/App.config
+++ b/ProofOfConcept.Tests/App.config
@@ -56,6 +56,9 @@
       <add automationTool   = "Selenium"
            interface    = "ProofOfConcept.Behaviors.IDropDownBehavior, ProofOfConcept"
            resolvedBy   = "ProofOfConcept.Selenium.Behaviors.SeleniumDropDownBehavior, ProofOfConcept.Selenium"></add>
+      <add automationTool   = "Selenium"
+           interface    = "ProofOfConcept.Behaviors.ITableBehavior, ProofOfConcept"
+           resolvedBy   = "ProofOfConcept.Selenium.Behaviors.SeleniumTableBehavior, ProofOfConcept.Selenium"></add>
 
 
     </dependencies>
