--- a/ProofOfConcept.Tests.RoadshowAccess/ProofOfConcept.Tests.RoadshowAccess.csproj
+++ b/ProofOfConcept.Tests.RoadshowAccess/ProofOfConcept.Tests.RoadshowAccess.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E241D265-27A0-4D3D-AEF7-B6B5DD639164}</ProjectGuid>
+    <ProjectGuid>{669D02D8-1908-4EBE-90FE-B06B3F642E77}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProofOfConcept.Selenium</RootNamespace>
-    <AssemblyName>ProofOfConcept.Selenium</AssemblyName>
+    <RootNamespace>ProofOfConcept.Tests.RoadshowAccess</RootNamespace>
+    <AssemblyName>ProofOfConcept.Tests.RoadshowAccess</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -29,52 +31,53 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject">
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebDriver">
-      <HintPath>..\packages\Selenium.WebDriver.2.48.0\lib\net40\WebDriver.dll</HintPath>
-    </Reference>
-    <Reference Include="WebDriver.Support">
-      <HintPath>..\packages\Selenium.Support.2.48.0\lib\net40\WebDriver.Support.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Behaviors\SeleniumButtonBehavior.cs" />
-    <Compile Include="Behaviors\SeleniumCheckBoxBehavior.cs" />
-    <Compile Include="Behaviors\SeleniumDropDownBehavior.cs" />
-    <Compile Include="Behaviors\SeleniumRadioButtonBehavior.cs" />
-    <Compile Include="Behaviors\SeleniumTextFieldBehavior.cs" />
-    <Compile Include="Behaviors\SeleniumTableBehavior.cs" />
-    <Compile Include="How.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SeleniumDriverDecorator.cs" />
-    <Compile Include="SeleniumElement.cs" />
-    <Compile Include="SeleniumElementFinder.cs" />
-    <Compile Include="SeleniumLocatorTransformer.cs" />
-    <Compile Include="SeleniumNativeElementHandler.cs" />
+    <Compile Include="TestScripts\TS05RetailSiteScript.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProofOfConcept.ComponentTests\ProofOfConcept.Tests.Component.csproj">
+      <Project>{290ebd1c-629e-432c-b943-d8e32dbdc30e}</Project>
+      <Name>ProofOfConcept.Tests.Component</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProofOfConcept.Selenium\ProofOfConcept.Selenium.csproj">
+      <Project>{e241d265-27a0-4d3d-aef7-b6b5dd639164}</Project>
+      <Name>ProofOfConcept.Selenium</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProofOfConcept.Services\ProofOfConcept.Services.csproj">
-      <Project>{16256FA4-36C1-41A0-A69B-CAFD7D4C6499}</Project>
+      <Project>{16256fa4-36c1-41a0-a69b-cafd7d4c6499}</Project>
       <Name>ProofOfConcept.Services</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ProofOfConcept.Utils\ProofOfConcept.Utils.csproj">
+      <Project>{665accbe-1b9a-4c42-a11f-97e6ee4583ee}</Project>
+      <Name>ProofOfConcept.Utils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProofOfConcept\ProofOfConcept.csproj">
-      <Project>{DD19B448-FEB7-40A8-A235-7E23B8D04BBC}</Project>
+      <Project>{dd19b448-feb7-40a8-a235-7e23b8d04bbc}</Project>
       <Name>ProofOfConcept</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
