--- a/ProofOfConcept/ProofOfConcept.csproj
+++ b/ProofOfConcept/ProofOfConcept.csproj
@@ -45,9 +45,12 @@
     <Compile Include="Behaviors\IButtonBehavior.cs" />
     <Compile Include="Behaviors\IDropDownBehavior.cs" />
     <Compile Include="Behaviors\IElementBehavior.cs" />
+    <Compile Include="Behaviors\ILinkBehavior.cs" />
+    <Compile Include="Behaviors\ITableBehavior.cs" />
     <Compile Include="Behaviors\Traits\ICheckable.cs" />
     <Compile Include="Behaviors\ICheckboxBehavior.cs" />
     <Compile Include="Behaviors\IRadioButtonBehavior.cs" />
+    <Compile Include="Behaviors\Traits\IIndexable.cs" />
     <Compile Include="Behaviors\Traits\ISelectable.cs" />
     <Compile Include="Behaviors\Traits\ISelectableValue.cs" />
     <Compile Include="Behaviors\Traits\ITextEditable.cs" />
